k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenrusl-instagram-api
spec:
  type: ClusterIP
  selector:
    app: tenrusl-instagram-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
